--- a/EduCode/assets/static/home.scss
+++ b/EduCode/assets/static/home.scss
@@ -124,6 +124,10 @@
       &:hover {
         opacity: 1;
       }
+
+      img {
+        display: inline-block !important;
+      }
     }
   }
 }
