--- a/EduCode/templates/page.html
+++ b/EduCode/templates/page.html
@@ -191,20 +191,20 @@
                                 {% set pictures = partner.attachments %}
                                 {% if pictures %}
                                     {% set partner_picture = pictures | first %}
-                                    <div class="partner-picture" style="height: 100px;">
-                                        <a href="{{ partner.url }}" target="_blank" class="mr-2 ml-2">
+                                    <div class="partner-picture text-center" style="min-height: 90px;">
+                                        <a href="{{ partner.url }}" target="_blank" class="mr-2 ml-2 text-center">
                                             <img src="{{ partner_picture | url }}" alt="" style="max-height: 72px; max-width: 72px">
                                         </a>
                                     </div>
                                 {% else %}
-                                    <div class="partner-picture">
+                                    <div class="partner-picture text-center">
                                         <a href="{{ partner.url }}" target="_blank">
                                             <img src="{{ '#' }}" alt="[icon brand]">
                                         </a>
                                     </div>
                                 {% endif %}
                                 <!-- url -->
-                                <h4 class="p-1 mt-1 text-center">
+                                <h4 class="p-1 mt-1">
                                     <a href="{{ partner.url }}" target="_blank" class="btn color-dark">
                                         {{ partner.name }}
                                     </a>
@@ -258,8 +258,8 @@
                                                  data-aos="zoom-in-down"
                                                  style="background: url('{{ lieu_picture | url }}') no-repeat center center;
                                                         height: 150px;
-                                                        -webkit-background-size: cover;
-                                                        background-size: cover;"
+                                                        -webkit-background-size: contain;
+                                                        background-size: contain;"
                                                         onclick="location.href = '{{ lieu.url_path | url }}'">
                                             </div>
                                         {% else %}
@@ -358,19 +358,19 @@
                     {{ this.submissions_text }}
                 </div>
                 <hr>
-
-                <iframe src="https://framaforms.org/soumission-a-educode-1524690937"
-                        style="border: solid #EEE 1px"
-                        width="100%"
-                        height="600"></iframe>
-                <p class="text-center" data-aos="zoom-in-down">
-                   <a  href="https://educode2018.sciencesconf.org/"
-                       class="btn btn-lg btn-warning text-uppercase"
-                       target="_blank">
-                           <i class="fa fa-plus"></i>
-                           {{ this.s_submit_here }}
-                   </a>
-                </p>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12 col-sm-4 text-center">
+                            <a href="http://27.educode.be" target="_blank" class="btn btn-lg btn-warning">{{ this.s_monday_27 }}</a>
+                        </div>
+                        <div class="col-12 col-sm-4 text-center">
+                            <a href="http://28.educode.be" target="_blank" class="btn btn-lg btn-warning">{{ this.s_thuesday_28 }}</a>
+                        </div>
+                        <div class="col-12 col-sm-4 text-center">
+                            <a href="http://29.educode.be" target="_blank" class="btn btn-lg btn-warning">{{ this.s_wednesday_29 }}</a>
+                        </div>
+                    </div>
+                </div>
                 <hr>
             </div>
         
@@ -440,7 +440,7 @@
           infinite: true,
           speed: 1500,
           autoplaySpeed: 300,
-          autoplay:true,
+          autoplay:false,
           slidesToShow: 10,
           slidesToScroll: 2,
           responsive: [
