Licence CC-BY-SA
fix #8

--- a/EduCode/templates/layout.html
+++ b/EduCode/templates/layout.html
@@ -64,7 +64,8 @@
                         <a href="#anchor-press"           class="list-group-item d-inline-block">{{ this.s_press }}</a>
                         <a href="#anchor-contact"         class="list-group-item d-inline-block">{{ this.s_contact }}</a>
                         <hr>
-                        &copy; Copyleft 2018 by Nicolas Pettiaux.
+                        <div class="license text-center">{{ render_cc_license("by-sa", "normal") }}</div>
+                        <!-- &copy; Copyleft 2018 by Nicolas Pettiaux. -->
                     </div>
                 </div>
             </div>
@@ -105,8 +106,8 @@
                         <a href="{{ alt + '/#anchor-press'           }}" class="list-group-item d-inline-block collapsed">{{ root_page.s_press }}</a>
                         <a href="{{ alt + '/#anchor-contact'         }}" class="list-group-item d-inline-block collapsed">{{ root_page.s_contact }}</a>
                         <hr>
-
-                        &copy; Copyleft 2018 by Nicolas Pettiaux.
+                        <div class="license text-center">{{ render_cc_license("by-sa", "normal") }}</div>
+                        <!-- &copy; Copyleft 2018 by Nicolas Pettiaux. -->
                     </div>
                 </div>
             </div>
