Concerne #20, logo dans le menu, il manque 2 logos

--- a/EduCode/templates/layout.html
+++ b/EduCode/templates/layout.html
@@ -64,6 +64,26 @@
                         <a href="#anchor-press"           class="list-group-item d-inline-block">{{ this.s_press }}</a>
                         <a href="#anchor-contact"         class="list-group-item d-inline-block">{{ this.s_contact }}</a>
                         <hr>
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-4 text-center">
+                                    <a href="https://www.bozar.be/fr" target="_blank">
+                                        <img width="48px" src="{{ "/partenaires/bozar/image-bozar.png" | url }}" alt="">
+                                    </a>
+                                </div>
+                                <div class="col-4 text-center">
+                                    <a href="#" target="_blank">
+                                        <img width="48px" src="{{ "#" | url }}" alt="[logo DW]">
+                                    </a>
+                                </div>
+                                <div class="col-4 text-center">
+                                    <a href="#" target="_blank">
+                                        <img width="48px" src="{{ "#" | url }}" alt="[logo Rég. Bxl]">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <hr>
                         <div class="license text-center">{{ render_cc_license("by-sa", "normal") }}</div>
                         <!-- &copy; Copyleft 2018 by Nicolas Pettiaux. -->
                     </div>
@@ -105,6 +125,24 @@
                         <a href="{{ alt + '/#anchor-submissions'     }}" class="list-group-item d-inline-block collapsed">{{ root_page.s_submissions }}</a>
                         <a href="{{ alt + '/#anchor-press'           }}" class="list-group-item d-inline-block collapsed">{{ root_page.s_press }}</a>
                         <a href="{{ alt + '/#anchor-contact'         }}" class="list-group-item d-inline-block collapsed">{{ root_page.s_contact }}</a>
+                        <hr>
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-4 text-center">
+                                    <a href="https://www.bozar.be/fr" target="_blank">
+                                        <img width="48px" src="{{ "/partenaires/bozar/image-bozar.png" | url }}" alt="">
+                                    </a>
+                                </div>
+                                <div class="col-4 text-center"><a href="#" target="_blank">
+                                    <img width="48px" src="{{ "#" | url }}" alt="[logo DW]">
+                                </a>
+                                </div>
+                                <div class="col-4 text-center"><a href="#" target="_blank">
+                                    <img width="48px" src="{{ "#" | url }}" alt="[logo Rég. Bxl]">
+                                </a>
+                                </div>
+                            </div>
+                        </div>
                         <hr>
                         <div class="license text-center">{{ render_cc_license("by-sa", "normal") }}</div>
                         <!-- &copy; Copyleft 2018 by Nicolas Pettiaux. -->
