bons logos Bxl et DW

--- a/EduCode/templates/layout.html
+++ b/EduCode/templates/layout.html
@@ -68,17 +68,17 @@
                             <div class="row">
                                 <div class="col-4 text-center">
                                     <a href="https://www.bozar.be/fr" target="_blank">
-                                        <img width="48px" src="{{ "/partenaires/bozar/image-bozar.png" | url }}" alt="">
+                                        <img width="48px" src="{{ "/partenaires/bozar/image-bozar.png" | url }}" alt="Bozar">
                                     </a>
                                 </div>
                                 <div class="col-4 text-center">
                                     <a href="#" target="_blank">
-                                        <img width="48px" src="{{ "#" | url }}" alt="[logo DW]">
+                                        <img width="48px" src="{{ "/partenaires/digital-wallonia/digitalwallonia-logo-degrades-358x259.png" | url }}" alt="Digital Wallonia">
                                     </a>
                                 </div>
                                 <div class="col-4 text-center">
                                     <a href="#" target="_blank">
-                                        <img width="48px" src="{{ "#" | url }}" alt="[logo Rég. Bxl]">
+                                        <img width="48px" src="{{ "/partenaires/region-de-bruxelles-capitale/logotype_2_rgb_72_blanc.jpg" | url }}" alt="Région de Bruxelles-Capitale">
                                     </a>
                                 </div>
                             </div>
@@ -134,11 +134,11 @@
                                     </a>
                                 </div>
                                 <div class="col-4 text-center"><a href="#" target="_blank">
-                                    <img width="48px" src="{{ "#" | url }}" alt="[logo DW]">
+                                    <img width="48px" src="{{ "/partenaires/digital-wallonia/digitalwallonia-logo-degrades-358x259.png" | url }}" alt="Digital Wallonia">
                                 </a>
                                 </div>
                                 <div class="col-4 text-center"><a href="#" target="_blank">
-                                    <img width="48px" src="{{ "#" | url }}" alt="[logo Rég. Bxl]">
+                                    <img width="48px" src="{{ "/partenaires/region-de-bruxelles-capitale/logotype_2_rgb_72_blanc.jpg" | url }}" alt="Région de Bruxelles-Capitale">
                                 </a>
                                 </div>
                             </div>
