--- a/EduCode/templates/page.html
+++ b/EduCode/templates/page.html
@@ -155,7 +155,7 @@
                 <p class="text-center">
                     <a class="btn btn-lg btn-warning text-uppercase"
                        target="_blank"
-                       href="https://framaforms.org/je-souhaite-etre-tenu-informe-1512709479">{{ this.text_button }}</a>
+                       href="http://educode2018.eventbrite.fr">{{ this.text_button }}</a>
                 </p>
             </div>
         </div>
@@ -222,7 +222,7 @@
 
                     <div class="container-fluid">
                         <div class="row">
-                            <iframe src="https://framaforms.org/je-souhaite-etre-tenu-informe-1512709479"
+                            <iframe src="http://educode2018.eventbrite.fr"
                                     style="border: solid #EEE 1px"
                                     width="100%"
                                     height="600"></iframe>
