--- a/EduCode/templates/page.html
+++ b/EduCode/templates/page.html
@@ -358,13 +358,13 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-12 text-center mt-1 mb-1">
-                            <a style="min-width: 50%;" href="http://27.educode.be" target="_blank" class="btn btn-lg btn-warning">{{ this.s_free_expose }} - {{ this.s_monday_27 }}</a>
+                            <a style="min-width: 50%;" href="https://framaforms.org/proposition-de-stand-a-educode-1525663809" target="_blank" class="btn btn-lg btn-warning">{{ this.s_free_expose }} - {{ this.s_monday_27 }}</a>
                         </div>
                         <div class="col-12 text-center mt-1 mb-1">
-                            <a style="min-width: 50%;" href="http://28.educode.be" target="_blank" class="btn btn-lg btn-warning">{{ this.s_propose_atelier }} - {{ this.s_thuesday_28 }}</a>
+                            <a style="min-width: 50%;" href="https://framaforms.org/proposition-datelier-a-educode-1526116529" target="_blank" class="btn btn-lg btn-warning">{{ this.s_propose_atelier }} - {{ this.s_thuesday_28 }}</a>
                         </div>
                         <div class="col-12 text-center mt-1 mb-1">
-                            <a style="min-width: 50%;" href="http://29.educode.be" target="_blank" class="btn btn-lg btn-warning">{{ this.s_submit_paper }} - {{ this.s_wednesday_29 }}</a>
+                            <a style="min-width: 50%;" href="https://educode2018.sciencesconf.org/" target="_blank" class="btn btn-lg btn-warning">{{ this.s_submit_paper }} - {{ this.s_wednesday_29 }}</a>
                         </div>
                     </div>
                 </div>
