nettoyage de la page d'acceuil cf demandes de Alexandra

--- a/EduCode/templates/page.html
+++ b/EduCode/templates/page.html
@@ -148,7 +148,7 @@
                 <p class="text-center">
                     <a class="btn btn-lg btn-warning text-uppercase"
                        target="_blank"
-                       href="http://educode2018.eventbrite.fr">{{ this.text_button }}</a>
+                       href="https://framaforms.org/proposition-de-stand-a-educode-1525663809">{{ this.text_button }}</a>
                 </p>
             </div>
         </div>
@@ -381,15 +381,8 @@
                     {{ this.press_text }}
                 </div>
 
-                <div data-aos="zoom-in" class="text-center" style="font-size: 3rem;">
-                    <i class="fa fa-calendar-check-o"></i><br>
-                    <span class="color-darker-yellow" style="font-size: 1.8em;"><strong>7</strong></span>
-                    <span class="color-dark">{{ this.s_may }}</span>
-                </div>
-                <hr>
 
                 <p class="text-center" data-aos="zoom-in">
-                    <a href="#" class="btn btn-warning btn-lg text-uppercase">{{ this.s_registration }}</a>
                     <a href="{{ "/presse" | url }}" class="btn btn-warning btn-lg text-uppercase">Documents</a>
                 </p>
             </div>
