--- a/EduCode/templates/speaker.html
+++ b/EduCode/templates/speaker.html
@@ -3,6 +3,7 @@
 {% block content %}
     <main id="page-speaker" class="container">
         <h1 class="title mb-5 text-center color-darker-yellow"><strong>{{ this.name }}</strong></h1>
+
         <div class="row">
             <div class="col-12 col-sm-2">
                 {% set pictures = this.attachments %}
@@ -12,19 +13,60 @@
                 {% else %}
                     <img src="{{  "/imgs/user.png" | url }}" alt="" width="100%">
                 {% endif %}
+                <hr>
+                <ul style="padding-left: 15px;">
+                    {% if this.twitter_id and this.twitter_url %}
+                        <li class="mb-1">
+                            <img width="24px" src="{{ "/imgs/twitter.png" | url }}" alt=""/>
+                            <a target="_blank" href="{{ this.twitter_url }}">{{ this.twitter_id }}</a>
+                        </li>
+                    {% endif %}
+                    {% if this.gnusocial_id and this.gnusocial_url %}
+                        <li class="mb-1">
+                            <img width="24px" src="{{ "/imgs/gnusocial.png" | url }}" alt=""/>
+                            <a target="_blank" href="{{ this.gnusocial_url }}">{{ this.gnusocial_id }}</a>
+                        </li>
+                    {% endif %}
+                    {% if this.mastodon_id and this.mastodon_url %}
+                        <li class="mb-1">
+                            <img width="24px" src="{{ "/imgs/mastodon.png" | url }}" alt=""/>
+                            <a target="_blank" href="{{ this.mastodon_url }}">{{ this.mastodon_id }}</a>
+                        </li>
+                    {% endif %}
+                    {% if this.riot_id and this.riot_url %}
+                        <li class="mb-1">
+                            Riot : <!-- <img width="24px" src="{{ "/imgs/riot.png" | url }}" alt=""/> -->
+                            <a target="_blank" href="{{ this.riot_url }}">{{ this.riot_id }}</a>
+                        </li>
+                    {% endif %}
+                    {% if this.website_url %}
+                        <li class="mb-1">
+                            <img width="24px" src="{{ "/imgs/web.png" | url }}" alt=""/>
+                            <a target="_blank" href="{{ this.website_url }}">{{ this.website_url }}</a>
+                        </li>
+                    {% endif %}
+                    {% if this.tel %}
+                        <li class="mb-1">
+                            <img width="12px" src="{{ "/imgs/tel.png" | url }}" alt=""/>
+                            <strong>{{ this.tel }}</strong>
+                        </li>
+                    {% endif %}
+                </ul>
             </div>
             <div class="col-12 col-sm-10 border-dark">
                 <div>
-                    <span class="text-dark"><i class="fa fa-calendar"></i> Date</span>
+                    <span class="text-dark"><i class="fa fa-calendar"></i> Date d'intervention</span>
                     <br>
                     <strong>{{ this.date }}</strong>
                     <hr>
                 </div>
                 <div>
-                    <span class="text-dark"><i class="fa fa-flag"></i> From</span>
+                    <span class="text-dark"><i class="fa fa-globe"></i> Pays</span>
                     <br>
-                    <strong>{{ this.country }}</strong>
+                    <strong id="flag"> {{ this.country }}</strong>
                 </div>
+
+
                 <div class="bg-light p-2 mt-2 pt-2 speaker-description">
                     <span class="text-dark"><i class="fa fa-comment"></i> Description</span>
                     <hr>
@@ -39,5 +81,260 @@
             </div>
         </div>
     </main>
+{% endblock %}
+
+{% block javascript %}
+    <script>
+
+    let countries = {
+    "Afghanistan":"AF",
+    "Aland Islands":"AX",
+    "Albania":"AL",
+    "Algeria":"DZ",
+    "American Samoa":"AS",
+    "Andorra":"AD",
+    "Angola":"AO",
+    "Anguilla":"AI",
+    "Antarctica":"AQ",
+    "Antigua and Barbuda":"AG",
+    "Argentina":"AR",
+    "Armenia":"AM",
+    "Aruba":"AW",
+    "Australia":"AU",
+    "Austria":"AT",
+    "Azerbaijan":"AZ",
+    "Bahamas":"BS",
+    "Bahrain":"BH",
+    "Bangladesh":"BD",
+    "Barbados":"BB",
+    "Belarus":"BY",
+    "Belgium":"BE",
+    "Belize":"BZ",
+    "Benin":"BJ",
+    "Bermuda":"BM",
+    "Bhutan":"BT",
+    "Bolivia":"BO",
+    "Bosnia and Herzegovina":"BA",
+    "Botswana":"BW",
+    "Bouvet Island":"BV",
+    "Brazil":"BR",
+    "British Indian Ocean Territory":"IO",
+    "Brunei Darussalam":"BN",
+    "Bulgaria":"BG",
+    "Burkina Faso":"BF",
+    "Burundi":"BI",
+    "Cambodia":"KH",
+    "Cameroon":"CM",
+    "Canada":"CA",
+    "Cape Verde":"CV",
+    "Cayman Islands":"KY",
+    "Central African Republic":"CF",
+    "Chad":"TD",
+    "Chile":"CL",
+    "China":"CN",
+    "Christmas Island":"CX",
+    "Cocos (Keeling) Islands":"CC",
+    "Colombia":"CO",
+    "Comoros":"KM",
+    "Congo":"CG",
+    "Congo, The Democratic Republic of the":"CD",
+    "Cook Islands":"CK",
+    "Costa Rica":"CR",
+    "Cote D'Ivoire":"CI",
+    "Croatia":"HR",
+    "Cuba":"CU",
+    "Cyprus":"CY",
+    "Czech Republic":"CZ",
+    "Denmark":"DK",
+    "Djibouti":"DJ",
+    "Dominica":"DM",
+    "Dominican Republic":"DO",
+    "Ecuador":"EC",
+    "Egypt":"EG",
+    "El Salvador":"SV",
+    "Equatorial Guinea":"GQ",
+    "Eritrea":"ER",
+    "Estonia":"EE",
+    "Ethiopia":"ET",
+    "Falkland Islands (Malvinas)":"FK",
+    "Faroe Islands":"FO",
+    "Fiji":"FJ",
+    "Finland":"FI",
+    "France":"FR",
+    "French Guiana":"GF",
+    "French Polynesia":"PF",
+    "French Southern Territories":"TF",
+    "Gabon":"GA",
+    "Gambia":"GM",
+    "Georgia":"GE",
+    "Germany":"DE",
+    "Ghana":"GH",
+    "Gibraltar":"GI",
+    "Greece":"GR",
+    "Greenland":"GL",
+    "Grenada":"GD",
+    "Guadeloupe":"GP",
+    "Guam":"GU",
+    "Guatemala":"GT",
+    "Guernsey":"GG",
+    "Guinea":"GN",
+    "Guinea-Bissau":"GW",
+    "Guyana":"GY",
+    "Haiti":"HT",
+    "Heard Island and Mcdonald Islands":"HM",
+    "Holy See (Vatican City State)":"VA",
+    "Honduras":"HN",
+    "Hong Kong":"HK",
+    "Hungary":"HU",
+    "Iceland":"IS",
+    "India":"IN",
+    "Indonesia":"ID",
+    "Iran, Islamic Republic Of":"IR",
+    "Iraq":"IQ",
+    "Ireland":"IE",
+    "Isle of Man":"IM",
+    "Israel":"IL",
+    "Italy":"IT",
+    "Jamaica":"JM",
+    "Japan":"JP",
+    "Jersey":"JE",
+    "Jordan":"JO",
+    "Kazakhstan":"KZ",
+    "Kenya":"KE",
+    "Kiribati":"KI",
+    "Democratic People's Republic of Korea":"KP",
+    "Korea, Republic of":"KR",
+    "Kosovo":"XK",
+    "Kuwait":"KW",
+    "Kyrgyzstan":"KG",
+    "Lao People's Democratic Republic":"LA",
+    "Latvia":"LV",
+    "Lebanon":"LB",
+    "Lesotho":"LS",
+    "Liberia":"LR",
+    "Libyan Arab Jamahiriya":"LY",
+    "Liechtenstein":"LI",
+    "Lithuania":"LT",
+    "Luxembourg":"LU",
+    "Macao":"MO",
+    "Macedonia, The Former Yugoslav Republic of":"MK",
+    "Madagascar":"MG",
+    "Malawi":"MW",
+    "Malaysia":"MY",
+    "Maldives":"MV",
+    "Mali":"ML",
+    "Malta":"MT",
+    "Marshall Islands":"MH",
+    "Martinique":"MQ",
+    "Mauritania":"MR",
+    "Mauritius":"MU",
+    "Mayotte":"YT",
+    "Mexico":"MX",
+    "Micronesia, Federated States of":"FM",
+    "Moldova, Republic of":"MD",
+    "Monaco":"MC",
+    "Mongolia":"MN",
+    "Montenegro":"ME",
+    "Montserrat":"MS",
+    "Morocco":"MA",
+    "Mozambique":"MZ",
+    "Myanmar":"MM",
+    "Namibia":"NA",
+    "Nauru":"NR",
+    "Nepal":"NP",
+    "Netherlands":"NL",
+    "Netherlands Antilles":"AN",
+    "New Caledonia":"NC",
+    "New Zealand":"NZ",
+    "Nicaragua":"NI",
+    "Niger":"NE",
+    "Nigeria":"NG",
+    "Niue":"NU",
+    "Norfolk Island":"NF",
+    "Northern Mariana Islands":"MP",
+    "Norway":"NO",
+    "Oman":"OM",
+    "Pakistan":"PK",
+    "Palau":"PW",
+    "Palestinian Territory, Occupied":"PS",
+    "Panama":"PA",
+    "Papua New Guinea":"PG",
+    "Paraguay":"PY",
+    "Peru":"PE",
+    "Philippines":"PH",
+    "Pitcairn":"PN",
+    "Poland":"PL",
+    "Portugal":"PT",
+    "Puerto Rico":"PR",
+    "Qatar":"QA",
+    "Reunion":"RE",
+    "Romania":"RO",
+    "Russian Federation":"RU",
+    "Rwanda":"RW",
+    "Saint Helena":"SH",
+    "Saint Kitts and Nevis":"KN",
+    "Saint Lucia":"LC",
+    "Saint Pierre and Miquelon":"PM",
+    "Saint Vincent and the Grenadines":"VC",
+    "Samoa":"WS",
+    "San Marino":"SM",
+    "Sao Tome and Principe":"ST",
+    "Saudi Arabia":"SA",
+    "Senegal":"SN",
+    "Serbia":"RS",
+    "Seychelles":"SC",
+    "Sierra Leone":"SL",
+    "Singapore":"SG",
+    "Slovakia":"SK",
+    "Slovenia":"SI",
+    "Solomon Islands":"SB",
+    "Somalia":"SO",
+    "South Africa":"ZA",
+    "South Georgia and the South Sandwich Islands":"GS",
+    "Spain":"ES",
+    "Sri Lanka":"LK",
+    "Sudan":"SD",
+    "Suriname":"SR",
+    "Svalbard and Jan Mayen":"SJ",
+    "Swaziland":"SZ",
+    "Sweden":"SE",
+    "Switzerland":"CH",
+    "Syrian Arab Republic":"SY",
+    "Taiwan":"TW",
+    "Tajikistan":"TJ",
+    "Tanzania, United Republic of":"TZ",
+    "Thailand":"TH",
+    "Timor-Leste":"TL",
+    "Togo":"TG",
+    "Tokelau":"TK",
+    "Tonga":"TO",
+    "Trinidad and Tobago":"TT",
+    "Tunisia":"TN",
+    "Turkey":"TR",
+    "Turkmenistan":"TM",
+    "Turks and Caicos Islands":"TC",
+    "Tuvalu":"TV",
+    "Uganda":"UG",
+    "Ukraine":"UA",
+    "United Arab Emirates":"AE",
+    "United Kingdom":"GB",
+    "United States":"US",
+    "United States Minor Outlying Islands":"UM",
+    "Uruguay":"UY",
+    "Uzbekistan":"UZ",
+    "Vanuatu":"VU",
+    "Venezuela":"VE",
+    "Viet Nam":"VN",
+    "Virgin Islands, British":"VG",
+    "Virgin Islands, U.S.":"VI",
+    "Wallis and Futuna":"WF",
+    "Western Sahara":"EH",
+    "Yemen":"YE",
+    "Zambia":"ZM",
+    "Zimbabwe": "ZW"
+};
+
+    $("#flag").prepend('<img src="http://www.countryflags.io/' + countries["{{ this.country }}"] + '/flat/32.png"/>');
+    </script>
 {% endblock %}
 
