tarifs et bon lien d'inscription

--- a/EduCode/templates/page.html
+++ b/EduCode/templates/page.html
@@ -217,7 +217,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-12 text-center mt-2 mb-2">
-                            <a href="https://educode2018.eventbrite.fr" target="_blank" class="btn btn-lg btn-warning text-uppercase">{{ this.s_registration }}</a>
+                            <a href="http://brussel.iticketsro.com/Bozar/search/EDUCODE" target="_blank" class="btn btn-lg btn-warning text-uppercase">{{ this.s_registration }}</a>
                         </div>
                     </div>
                 </div>
