--- a/EduCode/templates/layout.html
+++ b/EduCode/templates/layout.html
@@ -78,6 +78,12 @@
                                 <div class="col-6 text-center">
                                     <a href="http://www.federation-wallonie-bruxelles.be" target="_blank"><img width="72px" src="{{ "/imgs/fwb.png" | url }}" alt="Région de Bruxelles-Capitale"></a>
                                 </div>
+                                <div class="col-6 text-center">
+                                    <a href="http://lapremiere.be" target="_blank"><img width="72px" src="{{ "/partenaires/la-premiere/logo_lp_2017_rvb_filet.png" | url }}" alt="La Première"></a>
+                                </div>
+                                <div class="col-6 text-center">
+                                    <a href="http://rtbf.be/music3" target="_blank"><img width="72px" src="{{ "/partenaires/music3/logo_m3_rvb_15.png" | url }}" alt="Music3"></a>
+                                </div>
                             </div>
                         </div>
                         <hr>
@@ -137,6 +143,13 @@
                                 <div class="col-4 text-center"><a href="#" target="_blank">
                                     <img width="48px" src="{{ "/partenaires/region-de-bruxelles-capitale/logotype_2_rgb_72_blanc.jpg" | url }}" alt="Région de Bruxelles-Capitale">
                                 </a>
+                                <div class="col-6 text-center">
+                                    <a href="http://lapremiere.be" target="_blank"><img width="72px" src="{{ "/partenaires/la-premiere/logo_lp_2017_rvb_filet.png" | url }}" alt="La Première"></a>
+                                </div>
+                                <div class="col-6 text-center">
+                                    <a href="http://rtbf.be/music3" target="_blank"><img width="72px" src="{{ "/partenaires/music3/logo_m3_rvb_15.png" | url }}" alt="Music3"></a>
+                                </div>
+
                                 </div>
                             </div>
                         </div>
