logo de unesco dans bandeau - encore un souci !

--- a/EduCode/templates/layout.html
+++ b/EduCode/templates/layout.html
@@ -84,6 +84,9 @@
                                 <div class="col-6 text-center">
                                     <a href="http://rtbf.be/music3" target="_blank"><img width="72px" src="{{ "/partenaires/music3/logo_m3_rvb_15.png" | url }}" alt="Music3"></a>
                                 </div>
+                                <div class="col-6 text-center">
+                                    <a href="http://unesco.org" target="_blank"><img width="72px" src="{{ "/partenaires/unesco/unesco_logo_small-117.png" | url }}" alt="Unesco"></a>
+                                </div>
                             </div>
                         </div>
                         <hr>
@@ -136,7 +139,8 @@
                                         <img width="48px" src="{{ "/partenaires/bozar/image-bozar.png" | url }}" alt="">
                                     </a>
                                 </div>
-                                <div class="col-4 text-center"><a href="#" target="_blank">
+                                <div class="col-4 text-center">
+                                    <a href="#" target="_blank">
                                     <img width="48px" src="{{ "/partenaires/digital-wallonia/digitalwallonia-logo-degrades-358x259.png" | url }}" alt="Digital Wallonia">
                                 </a>
                                 </div>
@@ -149,7 +153,8 @@
                                 <div class="col-6 text-center">
                                     <a href="http://rtbf.be/music3" target="_blank"><img width="72px" src="{{ "/partenaires/music3/logo_m3_rvb_15.png" | url }}" alt="Music3"></a>
                                 </div>
-
+                                <div class="col-6 text-center">
+                                    <a href="http://unesco.org" target="_blank"><img width="72px" src="{{ "/partenaires/unesco/unesco_logo_small-117.png" | url }}" alt="Unesco"></a>
                                 </div>
                             </div>
                         </div>
