bons logos rtbf

--- a/EduCode/templates/layout.html
+++ b/EduCode/templates/layout.html
@@ -66,6 +66,12 @@
                         <hr>
                         <div class="container">
                             <div class="row">
+                                <div class="col-6 text-center">
+                                    <a href="http://lapremiere.be" target="_blank"><img width="75px" src="{{ "/partenaires/la-premiere/logo_lp_2017_rvb_filet.png" | url }}" alt="La Première"></a>
+                                </div>
+                                <div class="col-6 text-center">
+                                    <a href="http://rtbf.be/musiq3" target="_blank"><img width="72px" src="{{ "/partenaires/musiq3/logo_m3_rvb_filet_15.png" | url }}" alt="Musiq'3"></a>
+                                </div>
                                 <div class="col-6 text-center mb-1">
                                     <a href="https://www.bozar.be/fr" target="_blank"><img width="56px" src="{{ "/partenaires/bozar/image-bozar.png" | url }}" alt="Bozar"></a>
                                 </div>
@@ -79,13 +85,7 @@
                                     <a href="http://www.federation-wallonie-bruxelles.be" target="_blank"><img width="72px" src="{{ "/imgs/fwb.png" | url }}" alt="Région de Bruxelles-Capitale"></a>
                                 </div>
                                 <div class="col-6 text-center">
-                                    <a href="http://lapremiere.be" target="_blank"><img width="72px" src="{{ "/partenaires/la-premiere/logo_lp_2017_rvb_filet.png" | url }}" alt="La Première"></a>
-                                </div>
-                                <div class="col-6 text-center">
-                                    <a href="http://rtbf.be/music3" target="_blank"><img width="72px" src="{{ "/partenaires/music3/logo_m3_rvb_15.png" | url }}" alt="Music3"></a>
-                                </div>
-                                <div class="col-6 text-center">
-                                    <a href="http://unesco.org" target="_blank"><img width="72px" src="{{ "/partenaires/unesco/unesco_logo_small-117.png" | url }}" alt="Unesco"></a>
+                                    <a href="http://unesco.org" target="_blank"><img width="72px" src="{{ "/partenaires/unesco/unesco_logo-small-117.png" | url }}" alt="Unesco"></a>
                                 </div>
                             </div>
                         </div>
@@ -134,6 +134,16 @@
                         <hr>
                         <div class="container">
                             <div class="row">
+                                <div class="col-6 text-center">
+                                    <a href="http://lapremiere.be" target="_blank">
+                                       <img width="75px" src="{{ "/partenaires/la-premiere/logo_lp_2017_rvb_filet.png" | url }}" alt="La Première">
+                                    </a>
+                                </div>
+                                <div class="col-6 text-center">
+                                    <a href="http://rtbf.be/musiq3" target="_blank">
+                                         <img width="72px" src="{{ "/partenaires/musiq3/logo_m3_rvb_filet_15.png" | url }}" alt="Musiq'3">
+                                    </a>
+                                </div>
                                 <div class="col-4 text-center">
                                     <a href="https://www.bozar.be/fr" target="_blank">
                                         <img width="48px" src="{{ "/partenaires/bozar/image-bozar.png" | url }}" alt="">
@@ -150,18 +160,8 @@
                                     </a>
                                 </div>
                                 <div class="col-6 text-center">
-                                    <a href="http://lapremiere.be" target="_blank">
-                                       <img width="72px" src="{{ "/partenaires/la-premiere/logo_lp_2017_rvb_filet.png" | url }}" alt="La Première">
-                                    </a>
-                                </div>
-                                <div class="col-6 text-center">
-                                    <a href="http://rtbf.be/music3" target="_blank">
-                                         <img width="72px" src="{{ "/partenaires/music3/logo_m3_rvb_15.png" | url }}" alt="Music3">
-                                    </a>
-                                </div>
-                                <div class="col-6 text-center">
                                     <a href="http://unesco.org" target="_blank">
-                                       <img width="72px" src="{{ "/partenaires/unesco/unesco_logo_small-117.png" | url }}" alt="Unesco">
+                                       <img width="72px" src="{{ "/partenaires/unesco/unesco_logo-small-117.png" | url }}" alt="Unesco">
                                     </a>
                                 </div>
                             </div>
