--- a/EduCode/templates/speaker.html
+++ b/EduCode/templates/speaker.html
@@ -333,8 +333,7 @@
     "Zambia":"ZM",
     "Zimbabwe": "ZW"
 };
-
-    $("#flag").prepend('<img src="http://www.countryflags.io/' + countries["{{ this.country }}"] + '/flat/32.png"/>');
+    $("#flag").prepend('<img src="http://www.countryflags.io/{{ this.country }}/flat/32.png"/>');
     </script>
 {% endblock %}
 
