Design du tableau, relation d'ordre total et priorités
- Les intervenants sont désormais triés par ordre alphabétique selon leur nom

- Les partenaires sont désormais triés selon leur priorité (modifiable dans le panneau d'administration, champ priorité. Plus la priorité est élevée, plus le partenaire sera placé en priorité. Les partenaires de même priorité sont triés par ordre alhpabétique.

- J'ai modifié le design du tableau pour qu'il soit un peu plus sobre.

--- a/EduCode/assets/static/style.css
+++ b/EduCode/assets/static/style.css
@@ -408,6 +408,9 @@
 #anchor-expo {
   margin-bottom: 50px; }
 
+table td, table th {
+  text-align: center; }
+
 #anchor-partners .partner .partner-picture {
   opacity: .33;
   -webkit-transition: opacity ease .4s;
